# TZ_EffectiveMobile

./: README.md  main.py  phonebook.json  pyproject.toml
src/: contact.py  json_file.py  phonebook.py
